# cloudless

./: .cpanel.yml  .gitignore  BACKLOG.md  CONTRIBUTING.md  COPYRIGHT.md  NOTICE  OUTREACH.md  PC2Meshoffering.md  PROTOCOL.md  README.md  USER_GUIDE.md  billing_pain_analysis.md  cloud_service_coverage.md  cloudless_blueprint.md  cloudless_paper.md  mvp_design.md  security_architecture.md
.claude/: settings.json
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml  deploy-website.yml  merge-queue.yml  release.yml
branding/: logo-options.html
cloudless/: README.md  config.example.json  go.mod  go.sum
cloudless/cmd/cloudless/: main.go
cloudless/e2e/: churn_test.go  harness_test.go  multinode_test.go
cloudless/internal/audit/: audit.go  audit_test.go  signing_test.go
cloudless/internal/backup/: backup.go  backup_test.go  errors_test.go
cloudless/internal/bench/: bench.go  bench_test.go
cloudless/internal/config/: config.go  config_test.go
cloudless/internal/ext/: ext.go  ext_test.go
cloudless/internal/gateway/: admin_handlers_test.go  audit_endpoint_test.go  batch.go  ext_test.go  gateway.go  (+11 more)
examples/extensions/: summarize.py
sdk/js/: README.md  cloudless.d.ts  cloudless.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/cloudless/: __init__.py
sdk/python/tests/: test_conformance.py
sdk/testutil/: run_conformance.sh  stub_backend.py
website/: UPLOAD-TO-MILESWEB.md  blueprint.html  contributing.html  copyright.html  docs.html  index.html  mesh-offerings.html  protocol.html  whitepaper.html
(+53 files in other folders)
